--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-example-app",
+  "name": "nextjs-azureb2c-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "next": "12.1.0",
+    "next-auth": "^4.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
